MODON MRE BPDEV/force-app/main/default/objects/Documents__c/Documents__c.object-meta.xml
<CustomObject>
    <description>Object to store custom document details (Document placeholder)</description>
    <label>Document</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>