MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Booking_Fee_Line__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fee_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a payment-proof document to the booking fee line it covers (ADM &amp; Dari or Down Payment). Without this a Down Payment proof and an ADM proof on the same Sales Order are indistinguishable, which is what Modon asked us to fix.</description>
    <inlineHelpText>The booking fee this proof of payment covers.</inlineHelpText>
    <label>Booking Fee Line</label>
    <referenceTo>Booking_Fee_Line__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>