MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <formula>IF(NOT(ISBLANK( SalesOrder__c )), IF(ISBLANK(SalesOrder__r.CustomerAccount__r.Name), SalesOrder__r.CustomerAccount__r.FirstName &amp; &apos; &apos; &amp; SalesOrder__r.CustomerAccount__r.LastName, SalesOrder__r.CustomerAccount__r.Name ),
if(AND(NOT(ISBLANK(Expressionofinterest__c)), NOT(ISBLANK(Expressionofinterest__r.Opportunity__r.Account.Name))),Expressionofinterest__r.Opportunity__r.Account.Name,Expressionofinterest__r.Opportunity__r.Account.FirstName &amp; &apos; &apos; &amp; Expressionofinterest__r.Opportunity__r.Account.LastName ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>