MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Delivery_Option_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Option ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>