MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Direct_Debit_Request__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Debit Request</label>
    <referenceTo>DirectDebitRequest__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>