MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Do_not_Share_to_External__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Share_to_External__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Share to External</label>
    <type>Checkbox</type>
</CustomField>