MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/DocGen_Package_Id__c.field-meta.xml
<CustomField>
    <fullName>DocGen_Package_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocGen Package Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>