MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Document_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Document_Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>