MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Document_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Unit_Type__c</fullName>
    <label>Document Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type A</fullName>
            </value>
            <value>
                <fullName>Type B</fullName>
            </value>
            <value>
                <fullName>Type C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>