MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Type</label>
    <referenceTo>DocumentType__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>