MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/DocuSignURL__c.field-meta.xml
<CustomField>
    <fullName>DocuSignURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocuSignURL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>