MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/EnvelopID__c.field-meta.xml
<CustomField>
    <fullName>EnvelopID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EnvelopID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>