MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Expressionofinterest__c.field-meta.xml
<CustomField>
    <fullName>Expressionofinterest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field to store the corresponding EOI of the document.</description>
    <label>Expression of interest</label>
    <referenceTo>Expressionofinterest__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>