MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/GenerateDocument__c.field-meta.xml
<CustomField>
    <fullName>GenerateDocument__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A field to check whether if document should be generated or not</description>
    <label>Generate Document</label>
    <type>Checkbox</type>
</CustomField>