MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Is_SharePoint_Synced__c.field-meta.xml
<CustomField>
    <fullName>Is_SharePoint_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SharePoint Synced</label>
    <type>Checkbox</type>
</CustomField>