MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/JO2__c.field-meta.xml
<CustomField>
    <fullName>JO2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JO2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>JO2</relationshipName>
    <type>Lookup</type>
</CustomField>