MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/JO2Email__c.field-meta.xml
<CustomField>
    <fullName>JO2Email__c</fullName>
    <formula>SalesOrder__r.JO2Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JO2 Email</label>
    <type>Text</type>
</CustomField>