MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/JO3_Email__c.field-meta.xml
<CustomField>
    <fullName>JO3_Email__c</fullName>
    <formula>SalesOrder__r.JO3Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JO3 Email</label>
    <type>Text</type>
</CustomField>