MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/LastFileUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastFileUpdated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LastFileUpdated</label>
    <type>Date</type>
</CustomField>