MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Payment_Proof_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Proof_Type__c</fullName>
    <description>Classifies a payment-proof document. Denormalised alongside the two lookups so the console can group proofs and the &quot;no combined uploads&quot; rule is enforceable by a validation rule, without traversing a polymorphic relationship in every query.</description>
    <inlineHelpText>Which payment this proof covers.</inlineHelpText>
    <label>Payment Proof Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Down Payment</fullName>
            </value>
            <value>
                <fullName>ADM Registration Fee</fullName>
            </value>
            <value>
                <fullName>Milestone Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>