MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Power of Attorney</label>
    <referenceTo>Power_of_Attorney__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>