MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Proof_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proof_Amount__c</fullName>
    <description>The amount this proof of payment claims. Modon asked that each upload section display its required amount; storing the claimed amount lets Finance reconcile proof against requirement rather than opening the file to find out.</description>
    <inlineHelpText>Amount claimed by this proof of payment.</inlineHelpText>
    <label>Proof Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>