MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Refund__c.field-meta.xml
<CustomField>
    <fullName>Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund</label>
    <referenceTo>Refund__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>