MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Sales_Order_Installment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a payment-proof document to the milestone installment it covers. Mirrors the identical lookup already on Checkout_Payment__c, so proofs and gateway payments hang off the same record.</description>
    <inlineHelpText>The payment milestone this proof of payment covers.</inlineHelpText>
    <label>Sales Order Installment</label>
    <referenceTo>SalesOrderInstallments__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>