MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Sales_Order_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Relationship</label>
    <referenceTo>SalesOrderRelationship__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>