MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Salesorderstatus__c.field-meta.xml
<CustomField>
    <fullName>Salesorderstatus__c</fullName>
    <formula>TEXT(SalesOrder__r.Status__c)</formula>
    <label>Sales order status</label>
    <type>Text</type>
</CustomField>