MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/SendForESignature__c.field-meta.xml
<CustomField>
    <fullName>SendForESignature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A field to check whether if document should be sent for e-signature or not</description>
    <label>Send for E-Signature</label>
    <type>Checkbox</type>
</CustomField>