MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/SharePoint_Error__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SharePoint Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>