MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/SharePoint_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Last_Sync__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SharePoint Last Sync</label>
    <type>DateTime</type>
</CustomField>