MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/SharePoint_Logs__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Logs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SharePoint Logs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>