MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/SharePoint_Status__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Status__c</fullName>
    <label>SharePoint Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>