MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Show_Generate_SPA_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Generate_SPA_Button__c</fullName>
    <formula>OR(
    ISPICKVAL(SalesOrder__r.Down_Payment_Status__c, &quot;Collected&quot;),
    ISPICKVAL(SalesOrder__r.Down_Payment_Status__c, &quot;Paid&quot;),
    ISPICKVAL(SalesOrder__r.Down_Payment_Status__c, &quot;Partially Paid&quot;),
    ISPICKVAL(SalesOrder__r.Down_Payment_Status__c, &quot;Partially Collected&quot;),
    ISPICKVAL(SalesOrder__r.Down_Payment_Status__c, &quot;Collected – Ops&quot;),
    ISPICKVAL(SalesOrder__r.Down_Payment_Status__c, &quot;Received – Finance Ops&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Generate SPA Button</label>
    <type>Checkbox</type>
</CustomField>