MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Starting_Area__c.field-meta.xml
<CustomField>
    <fullName>Starting_Area__c</fullName>
    <label>Starting Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>