MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Suspension_Warning__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Warning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suspension/Warning</label>
    <referenceTo>Suspension_Warning__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>