MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/Unit_Option__c.field-meta.xml
<CustomField>
    <fullName>Unit_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Option</label>
    <referenceTo>Unit_Option__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>