MODON MRE BPDEV/force-app/main/default/objects/Documents__c/fields/UnitNo__c.field-meta.xml
<CustomField>
    <fullName>UnitNo__c</fullName>
    <formula>SalesOrder__r.Unit__r.Name</formula>
    <label>Unit No</label>
    <type>Text</type>
</CustomField>