MODON MRE BPDEV/force-app/main/default/objects/Documents__c/validationRules/Payment_Proof_Needs_One_Target.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Proof_Needs_One_Target</fullName>
    <active>true</active>
    <description>A classified payment proof must point at exactly one payment: a booking fee line, a milestone installment or an invoice (the ADM + Dari charge, Aurelix 17 Aug 2026) - never more than one, never none.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(TEXT(Payment_Proof_Type__c))),
  (
    IF(ISBLANK(Booking_Fee_Line__c), 0, 1)
    + IF(ISBLANK(Sales_Order_Installment__c), 0, 1)
    + IF(ISBLANK(Invoice__c), 0, 1)
  ) &lt;&gt; 1
)</errorConditionFormula>
    <errorMessage>A payment proof must relate to exactly one payment: a booking fee line, a payment milestone or an invoice, never more than one.</errorMessage>
</ValidationRule>